--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <!-- Required Social Preview MetaTags -->
 
     <!-- Primary Meta Tags -->
-    <meta name="title" content="HeyU Landing Page — #2 PSD To HTML Coversion" />
+    <meta name="title" content="Smart Bro VPN Liberia - Ending internet censorship" />
     <meta
       name="description"
-      content="HeyU is an open source single page App Landing page website PSD to HTML template. This is my #2 PSD To HTML Conversion. Best of Luck To Me ☻"
+      content="Smart Bro VPN Liberia - Ending internet censorship ☻"
     />
 
     <!-- Open Graph / Facebook -->
