--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
       <div class="language-option">
         <select name="Languages">
           <option value="English" selected>ENGLISH</option>
-          <option value="বাংলা">বাংলা</option>
+          <option value="French">French</option>
           <option value="हिन्दी">हिन्दी</option>
         </select>
       </div>
