--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
                 width="2.5rem"
                 height="2.5rem"
                 viewBox="0 0 16 16"
-                class="bi bi-camera-video"
+                class="bi bi-camera"
                 fill="currentColor"
                 xmlns="http://www.w3.org/2000/svg"
               >
