--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
         <div class="col span_1_of_3 first-col">
           <div class="first-item">
             <div class="item-description">
-              <h4>Start conversation</h4>
+              <h4>Download App</h4>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut
@@ -321,7 +321,7 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
           </div>
           <div class="first-item">
             <div class="item-description">
-              <h4>Make a free call</h4>
+              <h4>Install App</h4>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut
@@ -340,6 +340,8 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
                   fill-rule="evenodd"
                   d="M5.5 2A3.5 3.5 0 0 0 2 5.5v5A3.5 3.5 0 0 0 5.5 14h5a3.5 3.5 0 0 0 3.5-3.5V8a.5.5 0 0 1 1 0v2.5a4.5 4.5 0 0 1-4.5 4.5h-5A4.5 4.5 0 0 1 1 10.5v-5A4.5 4.5 0 0 1 5.5 1H8a.5.5 0 0 1 0 1H5.5z"
                 />
+                <path d="M16 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"
+                />
               </svg>
             </div>
           </div>
@@ -354,7 +356,7 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
                 width="2.5rem"
                 height="2.5rem"
                 viewBox="0 0 16 16"
-                class="bi bi-camera"
+                class="bi bi-cash-coin"
                 fill="currentColor"
                 xmlns="http://www.w3.org/2000/svg"
               >
@@ -364,13 +366,18 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
                 />
                 <path
                   fill-rule="evenodd"
-                  d="M8 11a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5zm0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"
+                  d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0z"
                 />
-                <path d="M3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z" />
+                <path d="M9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1h-.003zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195l.054.012z" 
+               />
+               <path d="M1 0a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h4.083c.058-.344.145-.678.258-1H3a2 2 0 0 0-2-2V3a2 2 0 0 0 2-2h10a2 2 0 0 0 2 2v3.528c.38.34.717.728 1 1.154V1a1 1 0 0 0-1-1H1z"
+               />
+               <path d="M9.998 5.083 10 5a2 2 0 1 0-3.132 1.65 5.982 5.982 0 0 1 3.13-1.567z"
+                />
               </svg>
             </div>
             <div class="item-description">
-              <h4>Take a picture</h4>
+              <h4>Activate App</h4>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut
@@ -383,18 +390,20 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
                 width="2.5rem"
                 height="2.5rem"
                 viewBox="0 0 16 16"
-                class="bi bi-camera"
+                class="bi bi-emoji-smile"
                 fill="currentColor"
                 xmlns="http://www.w3.org/2000/svg"
               >
                 <path
                   fill-rule="evenodd"
-                  d="M15 12V6a1 1 0 0 0-1-1h-1.172a3 3 0 0 1-2.12-.879l-.83-.828A1 1 0 0 0 9.173 3H6.828a1 1 0 0 0-.707.293l-.828.828A3 3 0 0 1 3.172 5H2a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2z"
+                  d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
                 />
+                <path d="M4.285 9.567a.5.5 0 0 1 .683.183A3.498 3.498 0 0 0 8 11.5a3.498 3.498 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.498 4.498 0 0 1 8 12.5a4.498 4.498 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zm4 0c0 .828-.448 1.5-1 1.5s-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5z"
+                 />
               </svg>
             </div>
             <div class="item-description">
-              <h4>Send your video</h4>
+              <h4>Enjoy</h4>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut
