--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
     <!-- Download The App Section -->
     <section id="download">
       <div class="row">
-        <img class="app-logo" src="images/app_logo.png" alt="" />
+        <img class="app-logo" src="images/app_logo.png" alt="/smartbroapp.apk" />
         <h2 class="stylish_heading">
           Download the app <span class="red_dot">.</span>
         </h2>
