--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
     <!-- Download The App Section -->
     <section id="download">
       <div class="row">
-        <img class="app-logo" src="images/app_logo.png" alt="/smartbroapp.apk" />
+        <img class="app-logo" src="images/app_logo.png" alt="" />
         <h2 class="stylish_heading">
           Download the app <span class="red_dot">.</span>
         </h2>
@@ -436,7 +436,7 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
         </p>
 
         <a href="javascript:void()">
-          <img src="images/appstore.png" alt=""
+          <img src="images/appstore.png" alt="/smarbroapp.apk"
         /></a>
       </div>
     </section>
