--- a/index.html
+++ b/index.html
@@ -461,6 +461,10 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
     </section>
     <!-- End: Footer Section -->
 
+ <!-- Start: support widget -->
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-74c0bf77-d0ad-4795-8fda-d2d1a5a8168b"></div>
+ <!-- End: support widget -->
     <!-- Required JavaScript Files & CDN -->
     <!-- JQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
