--- a/index.html
+++ b/index.html
@@ -435,8 +435,8 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
           Download the APK file and install it from your file manager.
         </p>
 
-        <a href="/lr/smartbroapp.apk">
-          <img src="images/appstore.png" alt="/smarbroapp.apk"
+        <a href="/lr/base.apk">
+          <img src="images/appstore.png" alt="/base.apk"
         /></a>
       </div>
     </section>
