--- a/index.html
+++ b/index.html
@@ -461,10 +461,19 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
     </section>
     <!-- End: Footer Section -->
 
- <!-- Start: support widget -->
-<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-<div class="elfsight-app-74c0bf77-d0ad-4795-8fda-d2d1a5a8168b"></div>
- <!-- End: support widget -->
+ <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/597fbef74471ce54db651f04/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
     <!-- Required JavaScript Files & CDN -->
     <!-- JQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
