--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ The Smart Bro Liberia services makes accessible what is unaccessible to you, and
           Download the APK file and install it from your file manager.
         </p>
 
-        <a href="https://github.com/smartbrovpn/lr/base.apk">
+        <a href="https://github.com/smartbrovpn/lr/raw/main/base.apk">
           <img src="images/appstore.png" alt="/base.apk"
         /></a>
       </div>
